--- a/package.json
+++ b/package.json
@@ -1,33 +1,29 @@
 {
-  "name": "amusement-park-tracker",
-  "version": "1.0.0",
-  "description": "",
-  "main": "./bin/www",
+  "name": "express-project-starter",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "start": "nodemon -r dotenv/config ./bin/www"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "dotenv": "^8.2.0",
-    "dotenv-cli": "^3.1.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-plugin-import": "^2.20.2",
-    "nodemon": "^2.0.2",
-    "sequelize-cli": "^5.5.1"
+    "start": "per-env",
+    "start:development": "nodemon -r dotenv/config ./bin/www",
+    "start:production": "node ./bin/www"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.5",
-    "csurf": "^1.11.0",
-    "express": "^4.17.1",
-    "express-session": "^1.17.0",
-    "express-validator": "^6.4.0",
-    "morgan": "^1.10.0",
-    "pg": "^8.0.0",
-    "pug": "^2.0.4",
-    "sequelize": "^5.21.6"
+    "connect-session-sequelize": "^7.0.4",
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "express-session": "^1.17.1",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1",
+    "per-env": "^1.0.2",
+    "pg": "^8.6.0",
+    "pug": "2.0.4",
+    "sequelize": "^5.22.3",
+    "sequelize-cli": "^5.5.1"
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0",
+    "dotenv-cli": "^4.0.0",
+    "nodemon": "^2.0.6"
   }
 }
