--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "per-env PGUSER=binger_session PGDATABASE=binger_session_db PGPASSWORD=password nodemon app.js",
+    "start": "per-env & PGUSER=binger_session PGDATABASE=binger_session_db PGPASSWORD=password nodemon app.js",
     "start:development": "nodemon -r dotenv/config ./bin/www",
     "start:production": "node ./bin/www"
   },
